feat: Add Teams feature, multiple team assignment for tasks, and tooltips
- Add Teams tab with team creation from contacts
- Support multiple team assignment for tasks (teamIds array)
- Add tooltips for creator and assignee information
- Update translations for all languages (en, tr, de, ar, ru)
- Fix TabNavigation button click issues
- Improve TasksTab with team display
- Add TeamsTab component for team management

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -122,6 +122,7 @@
     "financials": "المالية",
     "challenges": "التحديات والمزايا",
     "contacts": "جهات الاتصال",
+    "teams": "الفرق",
     "tasks": "المهام",
     "adminPanel": "لوحة الإدارة"
   },
