--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -122,6 +122,7 @@
     "financials": "Financials",
     "challenges": "Challenges & Advantages",
     "contacts": "Contacts",
+    "teams": "Teams",
     "tasks": "Tasks",
     "adminPanel": "Admin Panel"
   },
@@ -199,13 +200,33 @@
     "phone": "Phone",
     "address": "Address"
   },
+  "teams": {
+    "newTeam": "New Team",
+    "searchPlaceholder": "Search teams...",
+    "name": "Team Name",
+    "namePlaceholder": "Enter team name",
+    "description": "Description",
+    "descriptionPlaceholder": "Team description (optional)",
+    "members": "members",
+    "teamMembers": "Team Members",
+    "selectMembers": "Select Members",
+    "membersSelected": "members selected",
+    "noContacts": "No contacts available",
+    "noTeams": "No teams yet. Create your first team!",
+    "noTeamsFound": "No teams found matching your search."
+  },
   "tasks": {
     "newTask": "New Task",
     "title": "Title",
     "priority": "Priority",
     "status": "Status",
     "dueDate": "Due Date",
-    "assignee": "Assignee"
+    "assignee": "Assignee",
+    "team": "Team",
+    "teams": "Teams",
+    "noTeam": "No Team",
+    "noTeamsAvailable": "No teams available",
+    "teamsSelected": "teams selected"
   },
   "status": {
     "paid": "Paid",
@@ -246,6 +267,7 @@
     "challenges": "Challenge",
     "advantages": "Advantage",
     "contacts": "Contact",
+    "teams": "Team",
     "tasks": "Task",
     "users": "User",
     "SignupRequest": "Signup Request"
@@ -268,6 +290,7 @@
       "challenges": "New Challenge",
       "advantages": "New Advantage",
       "contacts": "New Contact",
+      "teams": "New Team",
       "tasks": "New Task",
       "users": "New User"
     },
@@ -376,7 +399,8 @@
     "fixDateDesc": "This event seems to be recurring. Assign a specific date to make it a one-time event.",
     "time": "Time",
     "participants": "Participants",
-    "type": "Type"
+    "type": "Type",
+    "createdBy": "Created by"
   },
   "legal": {
     "title": {
