--- a/public/i18n/translations/ar.json
+++ b/public/i18n/translations/ar.json
@@ -122,6 +122,7 @@
     "financials": "المالية",
     "challenges": "التحديات والمزايا",
     "contacts": "جهات الاتصال",
+    "teams": "الفرق",
     "tasks": "المهام",
     "adminPanel": "لوحة الإدارة"
   },
