--- a/public/i18n/translations/de.json
+++ b/public/i18n/translations/de.json
@@ -122,6 +122,7 @@
     "financials": "Finanzen",
     "challenges": "Herausforderungen & Vorteile",
     "contacts": "Kontakte",
+    "teams": "Teams",
     "tasks": "Aufgaben",
     "adminPanel": "Admin-Panel"
   },
