--- a/public/i18n/translations/ru.json
+++ b/public/i18n/translations/ru.json
@@ -122,6 +122,7 @@
     "financials": "Финансы",
     "challenges": "Проблемы и преимущества",
     "contacts": "Контакты",
+    "teams": "Команды",
     "tasks": "Задачи",
     "adminPanel": "Панель администратора"
   },
